# toy_payments_engine

./: Cargo.toml  README.md
src/: app_error.rs  client.rs  csv.rs  engine.rs  engine_error.rs  main.rs  transaction.rs
test_cases/cannot_dispute_withdrawal/: expected.csv  input.csv
test_cases/chargeback_already_resolved_ignored/: expected.csv
test_cases/chargeback_no_client_exists/: input.csv
test_cases/chargeback_with_negative_available/: expected.csv  input.csv
test_cases/chargeback_wrong_client_ignored/: input.csv
test_cases/client_created_on_first_transaction/: input.csv
test_cases/dispute_after_withdrawal_negative_available/: input.csv
test_cases/dispute_does_not_create_client/: input.csv
test_cases/dispute_holds_funds/: expected.csv
test_cases/dispute_nonexistent_tx_ignored/: input.csv
test_cases/dispute_operations_ignore_amount/: input.csv
test_cases/dispute_wrong_client_ignored/: expected.csv  input.csv
test_cases/dispute_zero_amount_deposit/: input.csv
test_cases/duplicate_tx_id_different_client_ignored/: input.csv
test_cases/duplicate_tx_id_ignored/: input.csv
test_cases/exact_balance_withdrawal/: expected.csv  input.csv
test_cases/held_funds_prevent_withdrawal/: input.csv
test_cases/interleaved_client_transactions/: expected.csv  input.csv
test_cases/locked_account_ignores_transactions/: expected.csv  input.csv
test_cases/max_client_id/: expected.csv  input.csv
test_cases/max_precision_exactly_four_places/: input.csv
test_cases/max_transaction_id/: input.csv
test_cases/messy_input/: input.csv
(+20 files in other folders)
